fix global text-overflow style bug

--- a/packages/steedos-lib/client/steedos/css/style.less
+++ b/packages/steedos-lib/client/steedos/css/style.less
@@ -47,7 +47,6 @@ h1,h2,h3,h4,h5 {
 	overflow: hidden;
 	text-overflow: ellipsis;
 	white-space: nowrap;
-	background: red;
 }
 span,a{
 	&.text-overflow{
